# topology-inference

./: .gitignore  CMakeLists.txt  README.md  bcast_results.cc  build.sh  entry_completion_collector.h  errorcheck.h  hostfile_viskaria  instance_id.h  latency_calculator.cc  main.cc  noreentry_pool.h  rdma_context.cc  rdma_resources.cc  rdma_resources.h  recv_request_pool.h  ring_latency_calculator.cc  run_top_inf.sh  semaphore.h  send_request_pool.h  topology_inference.sh
clustering/: cluster_nodes.py  latency-clustering.ipynb
clustering/.ipynb_checkpoints/: peer_read_latencies-checkpoint.txt
results/: cluster_topology.txt  ground_truth0418.txt  node_to_spine.txt  topology.result  topology_16.result  topology_2.txt  topology_32.result  topology_64.result  topology_8.result
scripts/: generate_hostlist.py  hostlist  run_commands.txt
src/: multispine_latency_calculator.cc  rdma_context.h  rdma_resources.h  ring_latency_calculator.cc
